--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,28 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^4.4.0
+  flutter_dotenv: ^6.0.0
+  app_links: ^7.0.0
+  easy_localization: ^3.0.8
+  shared_preferences: ^2.5.4
+  dio: ^5.9.1
+  flutter_svg: ^2.2.3
+  skeleton_text: ^3.0.1
+  cached_network_image: ^3.4.1
+  pinput: ^6.0.2
+  url_launcher: ^6.3.2
+  page_transition: ^2.2.1
+  package_info_plus: ^9.0.0
+  device_info_plus: ^12.3.0
+  intl: ^0.20.2
+  share_plus: ^12.0.1
+  timezone: ^0.11.0
+  device_preview: ^1.3.1
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.8
+  permission_handler: ^12.0.1
+  image_picker: ^1.2.1
+  smooth_page_indicator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
