--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   permission_handler: ^12.0.1
   image_picker: ^1.2.1
   smooth_page_indicator: ^2.0.1
+  keyboard_dismisser: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -81,8 +82,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
